# nnse_baremetal

./: BUILDING.md  HARDWARE_NOTES.md  Makefile  PROJECT_SUMMARY.md  README.md  gh.cmd  update_nnse_github.bat
apps/demos/nnse_baremetal/: GITHUB_INSTRUCTIONS.md  GIT_SUBTREE_WORKFLOW.md  Makefile  README.md  module.mk
apps/demos/nnse_baremetal/src/: nnse_baremetal.c  nnse_baremetal_diagram.md
nnse_baremetal_ap4l/: BUILDING.md  CMakeLists.txt  LICENSE  Makefile  README.md  module.mk
nnse_baremetal_ap4l/src/: am_devices_button.c  ambiq_nnsp_debug.h  def_nn3_se.c  nnse_baremetal_2025_10_09_First_Working_Beta.dnc  nnse_baremetal_ap4l.c  nnse_baremetal_ap4l.d  nnse_baremetal_diagram.md
src/: am_devices_led.c  nnse_baremetal.c  nnse_baremetal.c.bak  nnse_baremetal.c.dnc  nnse_baremetal_diagram.md
